some layout bugfix. changed fontsize of question form and objective form.

--- a/parsifal/reviews/static/css/planning.css
+++ b/parsifal/reviews/static/css/planning.css
@@ -31,17 +31,24 @@
   font-size: 1em;
 }
 
-.criteria-container {
-  width: 50%;
-  float: left;
+.criteria-container-right {
+  padding-left: 15px;
+}
+
+.criteria-container-left {
   padding-right: 15px;
 }
 
-.criteria-container input {
+div[class^="criteria-container"] {
+  float: left;
+  width: 50%;
+}
+
+div[class^="criteria-container"] input {
   width: 100%;
 }
 
-.criteria-container select {
+div[class^="criteria-container"] select {
   width: 100%; 
   margin: 10px 0;
 }
